--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,8 @@ node_modules/
 
 # Ignore github pull request template.
 .github/
+
+/app/assets/builds/*
+!/app/assets/builds/.keep
+
+/node_modules
