--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "dependencies": {
     "autoprefixer": "^10.4.15",
     "daisyui": "^3.7.5",
-    "postcss": "^8.4.30",
+    "postcss": "^8.4.31",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^15.1.0",
+    "postcss-nested": "^6.0.1",
     "tailwindcss": "^3.3.3"
   },
   "scripts": {
