--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "app",
   "private": "true",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "autoprefixer": "^10.4.15",
     "daisyui": "^3.7.5",
     "esbuild": "^0.19.4",
