Fix:デプロイのための修正

--- a/config/settings/development.yml
+++ b/config/settings/development.yml
@@ -1,2 +1,2 @@
 sorcery:
-  line_callback_url: 'https://0da4-2400-4052-6960-9b00-a4b4-fc11-952a-f241.ngrok-free.app//oauth/callback?provider=line'
+  line_callback_url: 'https://0da4-2400-4052-6960-9b00-a4b4-fc11-952a-f241.ngrok-free.app/oauth/callback?provider=line'
