--- a/config/settings/production.yml
+++ b/config/settings/production.yml
@@ -1,2 +1,2 @@
 sorcery:
-  line_callback_url: 'https://liverlog.fly.dev//oauth/callback?provider=line'
+  line_callback_url: 'https://liverlog.fly.dev/oauth/callback?provider=line'
