Add:LINEメッセージで休肝日を知らせる機能の追加

--- a/config/settings/production.yml
+++ b/config/settings/production.yml
@@ -1,2 +1,4 @@
 sorcery:
   line_callback_url: 'https://liverlog.fly.dev/oauth/callback?provider=line'
+page_url:
+  page_url: 'https://liverlog.fly.dev'
