--- a/compose.yml
+++ b/compose.yml
@@ -1,7 +1,7 @@
 services:
   db:
     image: postgres:latest
-    platform: linux/amd64
+    platform: linux/arm64/v8
     environment:
       TZ: Asia/Tokyo
       POSTGRES_PASSWORD: password
@@ -18,6 +18,7 @@ services:
       - .:/app
       - bundle_data:/usr/local/bundle:cached
       - node_modules:/app/node_modules
+      - .:/usr/src/app
     environment:
       TZ: Asia/Tokyo
     ports:
@@ -26,9 +27,10 @@ services:
       - db
       - chrome
   chrome:
-    image: seleniarm/standalone-chromium
+    image: seleniarm/standalone-chromium:latest
+    shm_size: 2g
     ports:
-      - 4444:4444
+      - "4444:4444"
 volumes:
   postgres_data:
   bundle_data:
