--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@hotwired/stimulus": "^3.2.2",
     "autoprefixer": "^10.4.15",
+    "chart.js": "^4.4.1",
     "daisyui": "^4.4.24",
     "rails_admin": "^3.1.2",
     "sass": "^1.69.6",
